--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.7.1",
     "normalize.css": "~8.0.1",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "react-leaflet": "^3.2.1",
     "react-router-dom": "~5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.2",
@@ -23,23 +25,17 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@testing-library/jest-dom": "~5.11.4",
     "@testing-library/react": "~11.1.0",
     "@testing-library/user-event": "~12.1.10",
     "@types/jest": "~26.0.15",
+    "@types/leaflet": "^1.7.4",
     "@types/node": "~12.0.0",
     "@types/react": "~17.0.0",
     "@types/react-dom": "~17.0.0",
